<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bkimage"
    tools:context=".AmListening2Activity" >

    <TextView
        android:id="@+id/textView_no_songs_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="26dp" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_no_songs_message"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31dp" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/Current_Playing_Song_Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Current_Playing_Song" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/Top_Song_Today_Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Top_Song_Today_Button" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/Top_Song_Week_Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Top_Song_Week_Button" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/Top_Song_Month_Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:shadowColor="#686868"
                android:text="@string/Top_Song_Month_Button" />
        </TableRow>
    </TableLayout>

    <com.tapfortap.AdView
        android:id="@+id/ad_view"
        android:layout_width="340dip"
        android:layout_height="50dip"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true" />

</RelativeLayout>