<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bkimage_1" >

<TextView
    android:id="@+id/postConfirmationMessage"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentLeft="true"
    android:layout_alignParentRight="true"
    android:layout_alignParentTop="true"
    android:layout_marginTop="27dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:text="@string/post_Confirmation_Message"
    android:textColor="#5E5D63"
    android:textSize="18sp"
    android:textStyle="bold" />

    <EditText
        android:id="@+id/socialPostMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/postConfirmationMessage"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:ems="13"
        android:inputType="textMultiLine"
        android:textSize="16sp"
        android:textStyle="italic" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/button_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button_yes"
        android:layout_alignBottom="@+id/button_yes"
        android:layout_marginTop="24dp"
        android:layout_toRightOf="@+id/button_yes"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/no_Button" />

    <Button
        android:id="@+id/button_yes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/socialPostMessage"
        android:layout_below="@+id/socialPostMessage"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="24dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/yes_Button"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/textView_no_songs_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_no"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/postConfirmationMessage"
        android:layout_toLeftOf="@+id/textView_no_songs_message"
        android:src="@drawable/facebook_icon" />

       <com.tapfortap.AdView
           android:id="@+id/ad_view"
           android:layout_width="320dip"
           android:layout_height="50dip"
           android:layout_alignParentLeft="true"
           android:layout_below="@+id/textView_no_songs_message" />

</RelativeLayout>
